# packer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dependencies.txt  run-tests.sh
src/: CMakeLists.txt  byteorder.h  filetype.h  ifstream_exc.h  main.cpp  packer.cpp  packer.h  streamhasher.h  xxhasher.cpp  xxhasher.h
tests/data/subdir/: broken.symlink  relative.symlink
tests/integration/: CMakeLists.txt  conftest.py  test_packer.py
tests/unit/: CMakeLists.txt  test_byteorder.cpp  test_xxhasher.cpp
